--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>LitAngularDemo1</title>
-    <base href="/demo-angular-LitElement" />
+    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
     <app-root></app-root>
   </body>
-  <!-- <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script> -->
 </html>
